# deepcell-types

./: .buildinfo  .buildinfo.bak  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  Dockerfile  HANDOFF_simplify.md  LICENSE  NOTICE  README.md  dataset.py  genindex.html  index.html  loss.py  model.py  objects.inv  predict.py  preprocess.py  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: index.md.txt
_sources/site/: API-key.md.txt  reference.rst.txt  tutorial.md.txt
_sources/site/_generated/: deepcell_types.DCTConfig.rst.txt  deepcell_types.DEFAULT_CONFIG.rst.txt  deepcell_types.PredictionResult.rst.txt  deepcell_types.PreprocessedFov.rst.txt  deepcell_types.abstention.ABSTENTION_LABEL.rst.txt  deepcell_types.apply_config.rst.txt  deepcell_types.make_preprocessor.rst.txt  deepcell_types.predict.rst.txt  deepcell_types.preprocess_fov.rst.txt  deepcell_types.utils.download_baseline_checkpoint.rst.txt  deepcell_types.utils.download_model.rst.txt  deepcell_types.utils.download_training_data.rst.txt  deepcell_types.utils.list_baseline_names.rst.txt  deepcell_types.utils.list_model_versions.rst.txt  deepcell_types.utils.list_supported_cell_types.rst.txt  deepcell_types.utils.list_supported_markers.rst.txt  deepcell_types.utils.resolve_supported_marker.rst.txt
_sources/superpowers/plans/: 2026-06-01-immediate-cli-abstention.md.txt  2026-06-02-preproc-adapt-hook-and-skill.md.txt
_sources/superpowers/specs/: 2026-06-01-immediate-cli-abstention-design.md.txt
data/: celltype_mapping.yaml
deepcell_types/: __init__.py  abstention.py  annotator_model.py  channel_mapping.yaml  config.py  dataset.py  loss.py  model.py  predict.py  preprocess.py  preprocessing.py  preprocessing_ops.py  vocab.json
deepcell_types/baselines/: NOTICE  __init__.py  __main__.py
deepcell_types/baselines/cellsighter/: README.md  __init__.py  model.py  run.py  transforms.py
deepcell_types/baselines/maps/: README.md  __init__.py  run.py
deepcell_types/baselines/nimbus/: README.md  __init__.py  run.py
deepcell_types/baselines/xgb/: README.md  run.py  tuning.py
deepcell_types/dct_kit/: config.py  image_funcs.py  utils.py
deepcell_types/training/: __init__.py  abstention.py  annotations.py  archive.py  baseline_features.py  config.py  dataloader.py  dataset.py  embeddings.py  gold_metadata.py  hierarchy.py  losses.py  metrics.py  patch.py  samplers.py  splits.py  transforms.py  utils.py
deepcell_types/utils/: __init__.py  _archive.py  _auth.py
deepcelltypes-kit/: pyproject.toml
deepcelltypes-kit/deepcelltypes_kit/: config.py  image_funcs.py  utils.py
deepcelltypes-kit/deepcelltypes_kit/config/: core_celltypes.yaml
demo/: inference.py
docs/: conf.py  index.md  requirements.txt
docs/reviews/: README.md
docs/site/: API-key.md  reference.rst  tutorial.md
scripts/: _combine_v3_and_C.py  benchmark_gold_standard.py  check_release_archive.sh  download_gold_standard.sh  evaluate_on_test.sh  fold_lora_into_proj.py  generate_manifest_index.py  generate_openai_embeddings.py  generate_openai_embeddings_v8.py  generate_splits.py  ingest_gold_to_zarr.py  predict.py  pretrain.py  refine_mp_labels_with_intensity_v2.py  repackage_release_checkpoint.py  retrain_head.py  run_gold_standard_nimbus.py  split_val_for_test.py  train.py  tutorial_local_demo.py  validate_archive_contract.py
site/: API-key.html  reference.html  tutorial.html
site/_generated/: deepcell_types.DCTConfig.html  deepcell_types.DEFAULT_CONFIG.html  deepcell_types.PredictionResult.html  deepcell_types.PreprocessedFov.html  deepcell_types.abstention.ABSTENTION_LABEL.html  deepcell_types.apply_config.html  deepcell_types.make_preprocessor.html  deepcell_types.predict.html  deepcell_types.preprocess_fov.html  deepcell_types.utils.download_baseline_checkpoint.html  deepcell_types.utils.download_model.html  deepcell_types.utils.download_training_data.html  deepcell_types.utils.list_baseline_names.html  deepcell_types.utils.list_model_versions.html  deepcell_types.utils.list_supported_cell_types.html  deepcell_types.utils.list_supported_markers.html  deepcell_types.utils.resolve_supported_marker.html
skills/preproc-adapt/: README.md  SKILL.md
splits/: README.md  fov_split.json  fov_split_test.json  fov_split_test_current.json  fov_split_v10_test.json  fov_split_v10_valsubset.json  fov_split_valsubset.json
superpowers/plans/: 2026-06-01-immediate-cli-abstention.html  2026-06-02-preproc-adapt-hook-and-skill.html
superpowers/specs/: 2026-06-01-immediate-cli-abstention-design.html
tests/: conftest.py  test_abstention_inference.py  test_annotations.py  test_archive.py  test_archive_contract_validator.py  test_auth.py  test_baseline_feature_splits.py  test_canonical_inference.py  test_centroid_tolerance.py  test_channel_aliases.py  test_checkpoint_roundtrip.py  test_combine_v3_and_C.py  test_ct_abstention_cli.py  test_dataloader_integration.py  test_dataset_cache.py  test_dataset_celltypes.py  test_dataset_splits.py  test_download_delegation.py  test_embeddings_load.py  test_gold_metadata.py  test_hierarchical_eval.py  test_hierarchy_one_way.py  test_inference_deps.py  test_inner_val_carve.py  test_losses.py  test_min_channels.py  test_post_v7_strip.py  test_predlogger_dataframe.py  test_preprocess_hook.py  test_preprocessing.py  test_preprocessing_ops.py  test_public_listing_api.py  test_refine_mp_labels_v2.py  test_repackage_release_checkpoint.py  test_resume_onecycle_schedule.py  test_samplers.py  test_scripts_predict.py  test_scripts_predict_main.py  test_split_patient_grouping.py  test_stratified_splits.py  (+5 more)
tests/baselines/: conftest.py  test_cellsighter_convert_batch_characterization.py  test_maps_cellsighter_cli.py  test_maps_cellsighter_equivalence.py  test_maps_normalization.py  test_models_smoke.py  test_nimbus_coverage_gate.py  test_nimbus_metrics_characterization.py  test_no_baseline_abstention.py  test_runner.py  test_runner_round2.py  test_submodules_removed.py  test_submodules_removed_round2.py
utils/: __init__.py  _auth.py
(+26 files in other folders)
