[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcell-types"
version = "0.1.0"
authors = [
    { name="Van Valen Lab", email="vanvalenlab@gmail.com" },
    { name="Xuefei (Julie) Wang" },
]
description = "A generalized cell phenotyping model for spatial proteomics"
readme = "README.md"
# zarr>=3.1 (used in the [train] extra) requires Python >=3.11, so the
# floor here matches that constraint rather than 3.10.
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml",
    "numpy",
    "numcodecs",
    "scipy",
    "scikit-image",
    "tqdm",
    "torch",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Recognition",
    # The LICENSE is a Modified Apache 2.0 with a non-commercial / academic
    # carve-out (see LICENSE for the full text). We surface the closest
    # standard classifier plus the "Other/Proprietary" classifier so
    # automated scanners do not file the package as plain Apache-2.0.
    "License :: OSI Approved :: Apache Software License",
    "License :: Other/Proprietary License",
]

license = {file = "LICENSE"}

[project.optional-dependencies]
# Training pipeline: required to use anything under deepcell_types.training,
# including the zarr-backed FullImageDataset, FocalLoss/HierarchicalLoss,
# wandb logging, and the FOV-grouped sampler. Not needed for inference.
# zarr is pinned >=3.1 because 3.0.0a* alpha has a metadata-cache bug.
# kaleido is required at runtime by `fig.write_image()` calls in
# training/utils.py; plotly is the figure backend behind those calls.
train = [
    "wandb",
    "zarr>=3.1.0,<4",
    "torchinfo",
    "torchmetrics",
    "pandas",
    "scikit-learn",
    "click",
    "plotly",
    "kaleido>=0.2.1,<1.0,!=0.2.1.post1",
    # Used by gold-standard ingest / refinement tools in
    # deepcell-types-research-workspace/scripts_local/.
    "tifffile",
    # Used by scripts/generate_openai_embeddings*.py.
    "openai",
]
# Baselines comparison (xgboost / optuna sweeps) and Nimbus inference baseline.
baselines = ["xgboost", "optuna", "nimbus-inference"]
all = ["deepcell-types[train,baselines]"]

[project.urls]
"Source Code" = "https://github.com/vanvalenlab/deepcell-types"
"Issue Tracker" = "https://github.com/vanvalenlab/deepcell-types/issues"

[tool.setuptools]
packages = [
    'deepcell_types',
    'deepcell_types.dct_kit',
    'deepcell_types.training',
    'deepcell_types.utils'
]
include-package-data = true

[tool.setuptools.package-data]
deepcell_types = [
    "dct_kit/config/*.yaml",
    # Training-side YAMLs (e.g. combined_celltypes.yaml used by
    # TissueNetConfig.combined_celltype_mapping) — must ship with
    # the wheel since training/config.py resolves them relative to
    # __file__, not via repo-root paths.
    "training/config/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
